...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.bank_Activity">

    <GridView
        android:id="@+id/GV_bank"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:columnWidth="70dp"
        android:numColumns="auto_fit"
        app:layout_constraintBottom_toTopOf="@+id/btnConverToGold"
        app:layout_constraintTop_toBottomOf="@+id/golds_willGain"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnConverToGold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="convert to Gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBackBank" />

    <TextView
        android:id="@+id/golds_willGain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/golds_number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBank" />

    <TextView
        android:id="@+id/golds_number"
...
